--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,18 @@
-# EditorConfig helps developers define and maintain consistent coding styles between different editors and IDEs
-# editorconfig.org
-
+# Editor configuration, see http://editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
-
-# We recommend you to keep these unchanged
-end_of_line = lf
 charset = utf-8
+indent_style = space
+indent_size = 4
+insert_final_newline = true
 trim_trailing_whitespace = true
+
+# Unix-style newlines with a newline ending every file
+[*]
+end_of_line = crlf
 insert_final_newline = true
 
 [*.md]
+max_line_length = true
 trim_trailing_whitespace = false
